<?xml version="1.0"?>
<package format="2">
  <name>B</name>
  <version>0.1.0</version>
  <description>BBBBBBB</description>

  <maintainer email="sloretz@openrobotics.org">sloretz</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>C</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
