<?xml version="1.0"?>
<package format="2">
  <name>C</name>
  <version>0.1.0</version>
  <description>CCCCCCC</description>

  <maintainer email="sloretz@openrobotics.org">sloretz</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
